1.added ability to jump to altered fields from row-action window header 2.formItemA_gridChunks(): enableLocking changed to false to solve sizing/scrolling problem

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1854,3 +1854,9 @@ span.i-entity-edit-handle {
 .i-window-header:hover.x-toolbar-default .x-tool-img.x-tool-uiedit:before {
     display: block;
 }
+.i-window-header {
+    min-height: 16px;
+}
+.i-window-header .i-sibling .i-combo-table {
+    margin-top: 1px;
+}
